fixing chat on small laptop screen

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -85,7 +85,7 @@ html, body {
     height: 10%;
     width: 87%;
     margin-left: 5%;
-    margin-bottom: 6%;
+    margin-bottom: 3%;
 }
 
 #onChat {
